# digital_twin

./: .gitignore  Makefile  README.md  dockerfile  pyproject.toml  requirements.txt
notebooks/: 01_quickscan_digital_twin.ipynb  02_poc_ml_forecast_digital_twin.ipynb  04_generate_capacity_kpis.ipynb
src/digital_twin/: README.md
src/digital_twin/core/: arrivals_ml.py  des_engine.py  hospital_des.py  mc_simulator.py  processtime_factory.py
src/digital_twin/hospital/: README.md  bed_capacity.py  config_loader.py  data_prep.py  hospital_model.py  scenarios.py
src/digital_twin/hospital/configs/: hospital_1.yml  hospital_2.yml
src/digital_twin/hospital/configs/scenarios/: bed_closure_wardA.yml  winter_peak.yml
src/digital_twin/main_cli/: cli.py
src/digital_twin/output/: metrics.py  plotting.py
